--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en" class="no-js">
 
 <head>
-  <title>L.S. Movers</title>
+  <title>I.S. Movers</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
