Added whatsapp integration.

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="page-banner-box">
                     <h1>About us.</h1>
-                    <a href="contact.html">Request a Free Quote</a>
+                    <a href="https://wa.me/971542857671" target="_blank">BOOK US NOW!</a>
                 </div>
             </div>
         </section>
@@ -120,7 +120,7 @@
             <div class="container">
 
                 <div class="title-section">
-                    <h1>Get In Touch</h1>
+                    <h1 style="color: #183F72; font-weight: bold;">Get In Touch</h1>
                     <p>We’re here to make your moving experience stress-free and smooth. Whether you're moving within an emirate or across the UAE, reach out to us for expert guidance and a free quote.</p>
                 </div>
             
@@ -175,7 +175,7 @@
 
         <!-- team-section 
 			================================================== -->
-        <section class="team-section">
+        <!-- <section class="team-section">
 
             <div class="container">
                 <div class="title-section">
@@ -223,7 +223,7 @@
 
             </div>
 
-        </section>
+        </section> -->
         <!-- End team section -->
 
         <!-- footer 
@@ -299,6 +299,13 @@
         <!-- End footer -->
 
     </div>
+
+    
+    <!-- WhatsApp Floating Button -->
+<a href="https://wa.me/971542857671" class="whatsapp-float" target="_blank">
+  <i class="fa fa-whatsapp whatsapp-icon"></i>
+</a>
+
     <!-- End Container -->
 
 </body>
