--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,17 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="services.html">Moving</a></li>
                             <li><a href="reviews.html">Reviews</a></li>
-                            <li><a chref="about.html">About Us</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li><a class="active" href="contact.html">Contact us</a></li>
+                            <li>
+                                <a
+                                  href="https://wa.me/971542857671"
+                                  target="_blank"
+                                  class="whatsapp-link"
+                                >
+                                  <i class="fa fa-whatsapp"></i> WhatsApp
+                                </a>
+                            </li>
                             <!-- <li class="search"><a href="#" class="open-search"><i class="fa fa-search"></i></a>
                                 <form class="form-search">
                                     <input type="search" placeholder="Search:" />
@@ -99,7 +108,7 @@
             <div class="container">
                 <div class="page-banner-box">
                     <h1>Contact us.</h1>
-                    <a href="#">Request a Free Quote</a>
+                    <a href="https://wa.me/971542857671" target="_blank">BOOK US NOW!</a>   
                 </div>
             </div>
         </section>
@@ -112,7 +121,7 @@
             <div class="container">
 
                 <div class="title-section">
-                    <h1>Get In Touch</h1>
+                    <h1 style="color: #183F72; font-weight: bold;">Get In Touch</h1>
                     <p>We’re here to make your moving experience stress-free and smooth. Whether you're moving within an emirate or across the UAE, reach out to us for expert guidance and a free quote.</p>
                 </div>
 
@@ -120,8 +129,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <form id="contact-form">
-                                <h2>We’re Ready to Help!</h2>
-                                <p>From the first box packed to the final item placed, our expert movers are here to make your transition smooth and stress-free. Whether you're relocating your home or office, we bring experience, care, and reliability every step of the way.</p>
+                                <!-- <h2>We’re Ready to Help!</h2>
+                                <p>From the first box packed to the final item placed, our expert movers are here to make your transition smooth and stress-free. Whether you're relocating your home or office, we bring experience, care, and reliability every step of the way.</p> -->
 
                                 <div class="row">
                                     <div class="col-sm-6">
@@ -146,7 +155,7 @@
                         <div class="col-md-6">
                             <h2>Our Location</h2>
                             <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230961.52023639195!2d55.007081194531246!3d25.24454420000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f430bdcfbf6af%3A0x9ffabe0f400bcc2f!2sLS%20Packers%20%26%20Movers%20Dubai!5e0!3m2!1sen!2sae!4v1754236450317!5m2!1sen!2sae" width="550" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8637.805844531615!2d54.3680803804105!3d24.4594580352509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sae!4v1754304897141!5m2!1sen!2sae" width="550" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
                     </div>
@@ -239,6 +248,12 @@
         <!-- End footer -->
 
     </div>
+
+    <!-- WhatsApp Floating Button -->
+<a href="https://wa.me/971542857671" class="whatsapp-float" target="_blank">
+  <i class="fa fa-whatsapp whatsapp-icon"></i>
+</a>
+
     <!-- End Container -->
 
 </body>
