Added whatsapp integration.

--- a/reviews.html
+++ b/reviews.html
@@ -106,7 +106,7 @@
             <div class="container">
                 <div class="page-banner-box">
                     <h1>reviews.</h1>
-                    <a href="contact.html">Request a Free Quote</a>
+                    <a href="https://wa.me/971542857671" target="_blank">BOOK US NOW!</a>
                 </div>
             </div>
         </section>
@@ -311,6 +311,14 @@
         <!-- End footer -->
 
     </div>
+
+    
+    <!-- WhatsApp Floating Button -->
+<a href="https://wa.me/971542857671" class="whatsapp-float" target="_blank">
+  <i class="fa fa-whatsapp whatsapp-icon"></i>
+</a>
+
+
     <!-- End Container -->
 
 </body>
