--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="clearfix">
             <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                 <div class="container">
-                    <div class="top-line">
+                    <!-- <div class="top-line">
                         <div class="row">
                             <div class="col-sm-8">
                                 <ul class="info-list">
@@ -58,7 +58,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -246,7 +246,7 @@
         <section class="moving-services-section">
             <div class="container">
                 <div class="title-section">
-                  <h1 style="font-weight: bold; font-size: 50px; color: #183F72;">Moving Services</h1>
+                  <h1 style="font-weight: bold; font-size: 50px; color: #c38463;">Moving Services</h1>
                   <p>Looking to relocate? We’ve got your back. Our comprehensive moving services ensure safe handling, secure transport, and on-time delivery of your possessions. With expert movers and quality packing materials, we make moving easy — and hassle-free.</p>
                 </div>
                 <div class="moving-services-box">
