--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
             <div class="container">
 
                 <div class="title-section">
-                    <h1 style="color: #c38463; font-weight: bold;">Get In Touch</h1>
+                    <!-- <h1 style="color: #c38463; font-weight: bold;">Its Us</h1> -->
                     <p>We’re here to make your moving experience stress-free and smooth. Whether you're moving within an emirate or across the UAE, reach out to us for expert guidance and a free quote.</p>
                 </div>
             
