Added Whatsapp integration.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                     <i class="fa fa-home"></i>
                                     <h2>Local Moving</h2>
                                     <p>Need to move across town? Our local moving service is fast, affordable, and stress-free. We handle everything from packing and loading to transportation and unpacking — all with care and professionalism. Let us make your local move smooth and efficient.</p>
-                                    <a href="contact.html">Book Now</a>
+                                    <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                 </div>
                                 <div class="hover-services">
                                     <img src="upload/others/serv1.jpg" alt="">
@@ -313,7 +313,7 @@
                                           <li>Trained movers for careful loading and unloading</li>
                                           <li>Quick and safe transport to your new location</li>
                                         </ul>
-                                        <a href="contact.html">Book Now</a>
+                                       <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -324,7 +324,7 @@
                                     <i class="fa fa-bus"></i>
                                     <h2>Long Distance Moves</h2>
                                     <p>Planning a move to another city or state? Our long-distance moving services ensure your belongings are packed securely, transported safely, and delivered on time — no matter the distance. We handle every detail so you can move with confidence.</p>
-                                    <a href="contact.html">Book Now</a>
+                                    <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                 </div>
                                 <div class="hover-services">
                                     <img src="upload/others/serv2.jpg" alt="">
@@ -335,7 +335,7 @@
                                           <li>Timely pickups and nationwide delivery</li>
                                           <li>Real-time tracking and dedicated support</li>
                                         </ul>
-                                        <a href="contact.html">Book Now</a>
+                                        <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -348,7 +348,7 @@
                                     <i class="fa fa-layer-group"></i>
                                     <h2>Commercial Moving</h2>
                                     <p>We offer hassle-free commercial moving with minimal disruption. Our team moves office equipment, furniture, and files securely — with precision and speed.</p>
-                                    <a href="contact.html">Book Now</a>
+                                    <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                 </div>
                                 <div class="hover-services">
                                     <img src="upload/others/serv3.jpg" alt="">
@@ -359,7 +359,7 @@
                                           <li>Flexible scheduling to avoid business disruptions</li>
                                           <li>Confidential document and server relocation</li>
                                         </ul>
-                                        <a href="contact.html">Book Now</a>
+                                        <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -370,7 +370,7 @@
                                     <i class="fa fa-store"></i>
                                     <h2>Storage Services</h2>
                                     <p>Need a secure place to store your belongings during or after your move? Our short-term and long-term storage solutions are safe, clean, and fully monitored. Whether it's household items or business inventory, we’ve got you covered.</p>
-                                    <a href="contact.html">Book Now</a>
+                                    <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                 </div>
                                 <div class="hover-services">
                                     <img src="upload/others/serv4.jpg" alt="">
@@ -381,7 +381,7 @@
                                           <li>Short-term and long-term storage options</li>
                                           <li>Inventory management and easy access</li>
                                         </ul>
-                                        <a href="contact.html">Book Now</a>
+                                        <a a href="https://wa.me/971542857671?text=Hello%20I%20want%20to%20book%20the%20service" target="_blank">Book Now</a>
                                     </div>
                                 </div>
                             </div>
