Changed Portfolio to Gallery

--- a/reviews.html
+++ b/reviews.html
@@ -98,7 +98,7 @@
                             <li><a class="active" href="reviews.html">Reviews</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="contact.html">Contact us</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="portfolio.html">Gallery</a></li>
                             <li>
                                 <a
                                   href="https://wa.me/971542857671"
