--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                             <li><a href="reviews.html">Reviews</a></li>
                             <li><a class="active" href="about.html">About Us</a></li>
                             <li><a href="contact.html">Contact us</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="portfolio.html">Gallery</a></li>
                             <li>
                                 <a
                                   href="https://wa.me/971542857671"
