Added Insta LInk

--- a/about.html
+++ b/about.html
@@ -302,12 +302,13 @@
                     </div>
                 
                     <!-- Follow Us -->
-                    <!-- <div class="col-md-3 col-sm-6 mb-4">
+                    <!-- Follow Us -->
+                    <div class="col-md-3 col-sm-6 mb-4">
                         <h4 style="font-weight:600; margin-bottom:15px;">Follow Us</h4>
-                        <a href="#" style="display:inline-block; border:2px solid #fff; border-radius:50%; width:36px; height:36px; text-align:center; line-height:32px; color:#fff; font-size:18px;">
+                        <a href="https://www.instagram.com/i.s.moverspackers?igsh=MW9rMDAwaXZpYTA5Yw==" target="_blank" style="display:inline-block; border:2px solid #fff; border-radius:50%; width:36px; height:36px; text-align:center; line-height:32px; color:#fff; font-size:18px;">
                             <i class="fa fa-instagram"></i>
                         </a>
-                    </div> -->
+                    </div>
                 
                 </div>
             </div>
