Added Custom WhatsApp Message.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <li><a href="portfolio.html">Gallery</a></li>
                             <li>
                                 <a
-                                  href="https://wa.me/971542857671"
+                                  href="https://wa.me/971542857671?text=Hello%20%F0%9F%91%8B%20Can%20I%20get%20more%20info%3F"
                                   target="_blank"
                                   class="whatsapp-link"
                                 >
@@ -751,7 +751,7 @@
     </a>
 
     <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/971542857671" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/971542857671?text=Hello%20%F0%9F%91%8B%20Can%20I%20get%20more%20info%3F" class="whatsapp-float" target="_blank">
       <i class="fa fa-whatsapp whatsapp-icon"></i>
     </a>
 
