Added Custom Whatsapp message and Updated Gallery Img.

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,10 +98,10 @@
                             <li><a href="reviews.html">Reviews</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="contact.html">Contact us</a></li>
-                            <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                            <li><a class="active" href="portfolio.html">Gallery</a></li>
                             <li>
                                 <a
-                                  href="https://wa.me/971542857671"
+                                  href="https://wa.me/971542857671?text=Hello%20%F0%9F%91%8B%20Can%20I%20get%20more%20info%3F"
                                   target="_blank"
                                   class="whatsapp-link"
                                 >
@@ -156,7 +156,7 @@
             <div class="row">
               <!-- Image 1 -->
               <div class="col-md-4 col-sm-6 mb-4" style="margin-bottom: 20px;">
-                <img src="upload/others/p1.jpeg" style="width: 300px; height: 500px; border-radius: 10px;" alt="Portfolio 1" class="img-fluid rounded">
+                <img src="upload/others/p1.jpg" style="width: 300px; height: 500px; border-radius: 10px;" alt="Portfolio 1" class="img-fluid rounded">
               </div>
           
               <!-- Image 2 -->
@@ -249,7 +249,7 @@
     </a>
 
     <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/971542857671" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/971542857671?text=Hello%20%F0%9F%91%8B%20Can%20I%20get%20more%20info%3F" class="whatsapp-float" target="_blank">
       <i class="fa fa-whatsapp whatsapp-icon"></i>
     </a>
 
