--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
         <section class="page-banner-section reviews">
             <div class="container">
                 <div class="page-banner-box">
-                    <h1>Portfolio.</h1>
+                    <h1>Gallery.</h1>
                     <a href="https://wa.me/971542857671" target="_blank">BOOK US NOW!</a>
                 </div>
             </div>
@@ -151,7 +151,7 @@
         
         <section id="portfolio" style="padding: 60px 0; background-color: #f8f9fa;">
           <div class="container">
-            <h2 style="text-align:center; font-weight:bold; margin-bottom:40px; color: #c38463; font-size: 30px;">Our Portfolio</h2>
+            <h2 style="text-align:center; font-weight:bold; margin-bottom:40px; color: #c38463; font-size: 30px;">Our Gallery</h2>
             
             <div class="row">
               <!-- Image 1 -->
