--- a/reviews.html
+++ b/reviews.html
@@ -257,7 +257,7 @@
                             <div class="reviews-testimonial-post">
                                 <span class="img-holder"></span>
                                 <div class="testimonial-text">
-                                    <p><span>"Fantastic service from start to finish during our move from Dubai to Abu Dhabi. Highly recommended for        any local or inter-emirate moves."</span></p>
+                                    <p><span>"Fantastic service from start to finish during our move from Dubai to Abu Dhabi. Highly recommended for any local or inter-emirate moves."</span></p>
                                     <p>"The team was friendly, punctual, and handled everything with care."</p>
                                     <h3>Hassan Al Sharqi</h3>
                                     <span>Dubai, UAE</span>
@@ -299,7 +299,7 @@
                         <ul style="list-style:none; padding:0; margin:0; line-height:2;">
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Local Moving</a></li>
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Long Distance Moving</a></li>
-                            <li><a href="services.html" style="color:#fff; text-decoration:none;">commercial Services</a></li>
+                            <li><a href="services.html" style="color:#fff; text-decoration:none;">Commercial Services</a></li>
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Storage Services</a></li>
                         </ul>
                     </div>
