--- a/services.html
+++ b/services.html
@@ -262,7 +262,7 @@
                             <div class="advice-post">
                                 <img src="upload/others/s2.jpg" alt="Trusted Logistical Support">
                                 <h2>The Trusted Source for All Your Logistical Needs</h2>
-                                <p>From inventory management to transportation coordination, trust professionals who understand thecomplexities of moving. Proper logistics planning saves time, money, and headaches.</p>
+                                <p>From inventory management to transportation coordination, trust professionals who understand the complexities of moving. Proper logistics planning saves time, money, and headaches.</p>
                             </div>
                         </div>
                     
@@ -270,7 +270,7 @@
                             <div class="advice-post">
                                 <img src="upload/others/s3.jpg" alt="Corporate Relocation Technology">
                                 <h2>Corporate Relocation Technology</h2>
-                                <p>Leverage advanced tracking systems and digital tools to monitor your move in real time. Technologyenhances transparency, improves communication, and ensures your assets are secure throughout therelocation process.</p>
+                                <p>Leverage advanced tracking systems and digital tools to monitor your move in real time. Technology enhances transparency, improves communication, and ensures your assets are secure throughout the relocation process.</p>
                             </div>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                         <ul style="list-style:none; padding:0; margin:0; line-height:2;">
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Local Moving</a></li>
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Long Distance Moving</a></li>
-                            <li><a href="services.html" style="color:#fff; text-decoration:none;">commercial Services</a></li>
+                            <li><a href="services.html" style="color:#fff; text-decoration:none;">Commercial Services</a></li>
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Storage Services</a></li>
                         </ul>
                     </div>
