--- a/about.html
+++ b/about.html
@@ -287,7 +287,7 @@
                         <ul style="list-style:none; padding:0; margin:0; line-height:2;">
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Local Moving</a></li>
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Long Distance Moving</a></li>
-                            <li><a href="services.html" style="color:#fff; text-decoration:none;">commercial Services</a></li>
+                            <li><a href="services.html" style="color:#fff; text-decoration:none;">Commercial Services</a></li>
                             <li><a href="services.html" style="color:#fff; text-decoration:none;">Storage Services</a></li>
                         </ul>
                     </div>
