--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,29 @@
     <meta name="twitter:site" content="@ismoverspackerscom">
 
 
+    <!-- Schema Markup (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MovingCompany",
+    "name": "IS Movers Packers",
+    "image": "https://ismoverspackers.com/images/logo.png",
+    "@id": "",
+    "url": "https://ismoverspackers.com/",
+    "telephone": "+971-54-285-7671",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Abu Dhabi",
+      "addressLocality": "Abu Dhabi",
+      "addressCountry": "AE"
+    },
+    "areaServed": ["Abu Dhabi", "Dubai", "Sharjah", "Al Ain", "Ras Al-Khaimah"],
+    "priceRange": "$$",
+    "description": "Professional movers and packers in Abu Dhabi and Dubai. Fast, affordable, and stress-free relocation services across the UAE."
+  }
+  </script>
+
+
     <link rel="stylesheet" href="css/style.min.css">
      <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
