--- a/about.html
+++ b/about.html
@@ -109,13 +109,13 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-                       <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                       <a class="navbar-brand" href="https://ismoverspackers.com/"><img src="images/logo.png" alt=""></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="https://ismoverspackers.com/">Home</a></li>
                             <li><a href="services.html">Moving</a></li>
                             <li><a href="reviews.html">Reviews</a></li>
                             <li><a class="active" href="about.html">About Us</a></li>
