updated email id

--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
                     <div style="flex: 1; min-width: 300px; background: #fff; padding: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
                       <div style="margin-bottom: 10px;"><i class="fa fa-envelope fa-2x"></i></div>
                       <h5>Mail</h5>
-                      <p><i class="fa fa-envelope"></i> info@ismovers.com</p>
+                      <a href="mailto:info@ismoverspackers.com"><i class="fa fa-envelope"></i> info@ismoverspackers.com</a>
                     </div>
                 
                     <!-- Contact Box -->
