--- a/services.html
+++ b/services.html
@@ -59,8 +59,8 @@
 
     <link rel="stylesheet" href="css/style.min.css">
      <!-- FontAwesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/v4-shims.min.css">
 
     <script src="js/moving-plugins.min.js"></script>
     <script type="text/javascript" src="js/jquery.countTo.js"></script>
